--- a/index.html
+++ b/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+<link rel="preconnect" href="https://fonts.gstatic.com">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+<link href="styles.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+<title>Frontend Mentor | FAQ Accordion Card</title>
+
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+    <div class="container">
+        <figure class="image">
+            <img class="image__left" src="images/illustration-woman-online-desktop.svg" alt="">
+        </figure>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+        <div class="accordion">
+            <h1>Faq</h1>
+            <div class="accordion__faq">
+                <input type="checkbox" id="title1">
+                <label for="title1">How many team members can I invite?</label>
+                <div class="accordion__content">
+                    <p class="answer">
+                        You can invite up to 2 additional 
+                        users on the Free plan. There is no 
+                        limit on team members for the Premium plan.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+    <!--What is the maximum file upload size?
+    No more than 2GB. All files in your account must fit your allotted storage space.
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+    How do I reset my password?
+    Click “Forgot password” from the login page or “Change password” from your profile page.
+    A reset link will be emailed to you.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+    Can I cancel my subscription?
+    Yes! Send us a message and we’ll process your request no questions asked.
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Do you provide additional support?
+    Chat and email support is available 24/7. Phone lines are open during normal business hours.
+    -->
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+    </div>
 </body>
 </html>
