--- a/index.html
+++ b/index.html
@@ -30,23 +30,42 @@
                         limit on team members for the Premium plan.
                     </p>
                 </div>
+                <input type="checkbox" id="title2">
+                <label for="title2">What is the maximum file upload size?</label>
+                <div class="accordion__content">
+                    <p class="answer">
+                        No more than 2GB. All files in your account must 
+                        fit your allotted storage space.
+                    </p>
+                </div>
+                <input type="checkbox" id="title3">
+                <label for="title3">How do I reset my password?</label>
+                <div class="accordion__content">
+                    <p class="answer">
+                        Click “Forgot password” from the login page or “Change 
+                        password” from your profile page. A reset link will be 
+                        emailed to you.
+                    </p>
+                </div>
+                <input type="checkbox" id="title4">
+                <label for="title4">Can I cancel my subscription?</label>
+                <div class="accordion__content">
+                    <p class="answer">
+                        Yes! Send us a message and we’ll process 
+                        your request no questions asked.
+                    </p>
+                </div>
+                <input type="checkbox" id="title5">
+                <label for="title5">Do you provide additional support?</label>
+                <div class="accordion__content">
+                    <p class="answer">
+                        Chat and email support is available 24/7. Phone 
+                        lines are open during normal business hours.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-
-    <!--What is the maximum file upload size?
-    No more than 2GB. All files in your account must fit your allotted storage space.
-
-    How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your profile page.
-    A reset link will be emailed to you.
-
-    Can I cancel my subscription?
-    Yes! Send us a message and we’ll process your request no questions asked.
-
-    Do you provide additional support?
-    Chat and email support is available 24/7. Phone lines are open during normal business hours.
-    -->
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Your Name Here</a>.
