--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div class="container">
-        <figure class="image">
+        <!--<figure class="image">
             <img class="image__left" src="images/illustration-woman-online-desktop.svg" alt="">
-        </figure>
+        </figure>-->
 
         <div class="accordion">
             <h1>Faq</h1>
@@ -68,7 +68,7 @@
     </div>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Kiara Rose</a>.
     </div>
 </body>
 </html>
