--- a/index.html
+++ b/index.html
@@ -13,62 +13,61 @@
 
 </head>
 <body>
-    <div class="container">
-        <!--<figure class="image">
-            <img class="image__left" src="images/illustration-woman-online-desktop.svg" alt="">
-        </figure>-->
-
-        <div class="accordion">
-            <h1>Faq</h1>
-            <div class="accordion__faq">
-                <input type="checkbox" id="title1">
-                <label for="title1">How many team members can I invite?</label>
-                <div class="accordion__content">
-                    <p class="answer">
-                        You can invite up to 2 additional 
-                        users on the Free plan. There is no 
-                        limit on team members for the Premium plan.
-                    </p>
-                </div>
-                <input type="checkbox" id="title2">
-                <label for="title2">What is the maximum file upload size?</label>
-                <div class="accordion__content">
-                    <p class="answer">
-                        No more than 2GB. All files in your account must 
-                        fit your allotted storage space.
-                    </p>
-                </div>
-                <input type="checkbox" id="title3">
-                <label for="title3">How do I reset my password?</label>
-                <div class="accordion__content">
-                    <p class="answer">
-                        Click “Forgot password” from the login page or “Change 
-                        password” from your profile page. A reset link will be 
-                        emailed to you.
-                    </p>
-                </div>
-                <input type="checkbox" id="title4">
-                <label for="title4">Can I cancel my subscription?</label>
-                <div class="accordion__content">
-                    <p class="answer">
-                        Yes! Send us a message and we’ll process 
-                        your request no questions asked.
-                    </p>
-                </div>
-                <input type="checkbox" id="title5">
-                <label for="title5">Do you provide additional support?</label>
-                <div class="accordion__content">
-                    <p class="answer">
-                        Chat and email support is available 24/7. Phone 
-                        lines are open during normal business hours.
-                    </p>
+    <div class="main-container">
+        <div class="container">
+            <div class="accordion">
+                <h1>Faq</h1>
+                <div class="accordion__faq">
+                    <input type="checkbox" id="title1">
+                    <label for="title1">How many team members can I invite?</label>
+                    <div class="accordion__content">
+                        <p class="answer">
+                            You can invite up to 2 additional 
+                            users on the Free plan. There is no 
+                            limit on team members for the Premium plan.
+                        </p>
+                    </div>
+                    <input type="checkbox" id="title2">
+                    <label for="title2">What is the maximum file upload size?</label>
+                    <div class="accordion__content">
+                        <p class="answer">
+                            No more than 2GB. All files in your account must 
+                            fit your allotted storage space.
+                        </p>
+                    </div>
+                    <input type="checkbox" id="title3">
+                    <label for="title3">How do I reset my password?</label>
+                    <div class="accordion__content">
+                        <p class="answer">
+                            Click “Forgot password” from the login page or “Change 
+                            password” from your profile page. A reset link will be 
+                            emailed to you.
+                        </p>
+                    </div>
+                    <input type="checkbox" id="title4">
+                    <label for="title4">Can I cancel my subscription?</label>
+                    <div class="accordion__content">
+                        <p class="answer">
+                            Yes! Send us a message and we’ll process 
+                            your request no questions asked.
+                        </p>
+                    </div>
+                    <input type="checkbox" id="title5">
+                    <label for="title5">Do you provide additional support?</label>
+                    <div class="accordion__content">
+                        <p class="answer">
+                            Chat and email support is available 24/7. Phone 
+                            lines are open during normal business hours.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="#">Kiara Rose</a>.
+        </div>
     </div>
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Kiara Rose</a>.
-    </div>
+    
 </body>
 </html>
